[metadata]
name = pbr
author = Code Factory Chile
summary = OpenStack smart greper
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    openstack
    tools
[files]
packages =
    pbr
[entry_points]
console_scripts =
    osgrep = osgrep.grep:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pbr]
autodoc_index_modules = 0
warnerrors = true
